# axum-test

./: Cargo.toml  db.sqlite3  diesel.toml
migrations/2024-06-10-181628_create_users/: up.sql
src/: controller.rs  model.rs
static/: index.js
templates/: hello.html
