[package]
name = "ntex-askama-test"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
diesel = { version = "2.2.0", features = ["sqlite"]}
dotenvy = "0.15.7"
tokio = {version = "*", features = ["full"]}
jsonwebtoken = "9.2.0"
serde = "1.0.197"
serde_json = "1.0.114"
chrono = "0.4.38"
axum = "0.7.5"
